# ju-tcs-rust-23-1

./: Cargo.toml
.github/workflows/: rust-checks.yml
src/: main.rs
