[package]
name = "ju-tcs-rust-23-1"
version = "0.1.0"
edition = "2021"
description = "Unix-like utils client"
licence-file = "LICENSE"
homepage = "https://github.com/fjasion/ju-tcs-rust-23-1"
repository = "https://github.com/fjasion/ju-tcs-rust-23-1"
readme = "README.md"

exclude = [
    ".github"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
